# onecomputer

./: .dockerignore  .env copy.example  .env.example  .gitignore  AGENTS.md  AUDIT.md  CLAUDE.md  README.md  REMOTE.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.archive/.workflows-2026-07-05/: MASTER-PLAN.md  NORTH-STAR.md  README.md  phase-10-enterprise-onboarding.js  phase-11-rbac-explainability.js  phase-12-sandbox-terminal.js  phase-14-gateway-approval-bridge.js  phase-15a-dual-stepup.js  phase-16-audit-timeline.js  phase-17-policy-hierarchy.js  phase-18-entra-sso.js  phase-19-demo-seed.js  phase-20-cleanup-refactor.js  phase-9-enterprise-admin-rbac.js
.claude/: launch.json
.gitea/workflows/: cd.yml  ci.yml
.github/workflows/: ci.yml
.onecomputer/background/: personal-connectors-95-state.json  personal-connectors-loop-instructions.md
apps/control-api/: package.json
apps/egress-proxy/: package.json
apps/gateway/: Cargo.toml
apps/gateway-fixture/: package.json
apps/gateway/src/: apps.rs  auth.rs  channel.rs  condition_match.rs  connect.rs  gateway.rs  identity_injection.rs  main.rs  mcp.rs  metrics.rs  policy.rs  util.rs  vti_signer.rs
apps/gateway/src/gateway/: approval_notify.rs  approval_poll.rs  dlp.rs  forward.rs  llm_upstream.rs  mitm.rs
apps/web/: .gitignore  .npmrc  AGENTS.md  design-qa.md  index.html  next.config.js  package.json  vite.config.mjs
apps/workspace-controller/: package.json
deploy/nginx/: onecomputer-portal.conf
deploy/openvtc/: azure-mediator-build.toml  azure-mediator-production.toml  azure-vta-setup.toml.template  generate-manager-wallet.mjs  onecomputer-openvtc.env.template  onecomputer-portal.nginx  onecomputer-web-openvtc.conf  openvtc-bridge.env.template  openvtc-didcomm-bridge.mjs  openvtc-didcomm-bridge.service  openvtc-mediator.service  openvtc-vta.service  openvtc-wallet.env.template  openvtc-wallet.mjs  openvtc-wallet.service  seed-openvtc-manager.mjs  wallet-mediator-smoke.mjs
deploy/runner/: act-runner.yaml
deploy/sudoers/: onecomputer-deploy
deploy/systemd/: onecomputer-act-runner.service  onecomputer-gateway.service  onecomputer-gitea-ci-bridge.service  onecomputer-litellm-bridge.service  onecomputer-web.service
docker/: docker-compose.yml
docker/visual-runtime/: Dockerfile  entrypoint.sh
docs/: VISUAL-RUNTIME-ARCHITECTURE.md  architecture.md  invgini-agent-events.example.json  invgini-agent-governance.md  invgini-vti-bridge-contract.md  safety.md
docs/onecomputer/: README.md  app-passport-and-vti-grant-schema-2026-06-21.md  azure-e2e-runbook.md  ciso-control-room.md  claude-agent-sdk-runtime.md  deploy-command-spec.md  e2e-demo-audit-2026-07-05.md  e2e-evidence-2026-07-12.md  gap-inventory-and-build-plan.md  gateway-hardening-runbook-2026-06-21.md  github-repository-strategy.md  governed-streamlit-url-proof-2026-06-21.md  installation.md  linear-board-operations.md  nodejs-dynamodb-url-proof-2026-06-21.md  openvtc-approver-contract.md  openvtc-azure-runtime.md  openvtc-ios-wallet-setup.md  openvtc-native-auth.md  policy-artifacts-and-evidence-chain-2026-06-21.md  react-static-url-proof-2026-06-21.md  rebrand-map.md  repo-and-runtime-boundary.md  sandbox-allocation-operations.md  vti-affinidi-integration-seam-2026-06-21.md  vti-key-sharing.md  vti-mobile-fork-study.md
docs/plan/: 00-current-state.md  01-north-star-and-personas.md  02-system-architecture.md  03-phase-roadmap.md  04-workflow-execution-plan.md  05-e2e-and-readiness-gates.md  06-risk-register.md  07-investor-readiness-plan.md  08-graphify-plan.md  09-ceo-demo-plan.md  10-demo-workflow-scripts.md  11-cleanup-refactor.md  12-e2e-api-test-suite-plan.md  13-remote-desktop-sandbox-audit-plan.md  README.md  e2e-test-matrix.csv
docs/secure-apps/: ecs-express-sandbox-poc.md  lambda-iam-vti-poc.md
infra/issue-001/: Dockerfile.node  README.md  compose.yml
infra/issue-002/: README.md  compose.yml  litellm-config.yaml  litellm-log-config.yaml
infra/issue-004/: README.md
infra/issue-005/: qualification-2026-07-20.md  qualify-identity-policy.mjs
infra/issue-006/: Dockerfile.workspace  README.md  build-workspace.sh  onecomputer-agent.desktop  onecomputer-agent.py  qualification-2026-07-20.md
infra/issue-007/: README.md  qualification-2026-07-20.md  qualify-limits.py  qualify-route.py
infra/issue-008/: README.md  compose.yml  governed-policy-qualification-2026-07-20.md  litellm-config.yaml  onecomputer_policy_callback.py  qualification-2026-07-20.md  qualify-oauth-custody.mjs  tool-surface-governed.json  tool-surface-readonly.json
infra/issue-009/: upstream-qualification-2026-07-21.md
local-plans/: README.md  v4-greenfield-governed-agent-platform.md
patterns/: registry.yaml
scripts/: generate-egress-grant-secret.mjs  generate-openvtc-executor-key.mjs  generate-policy-signing-key.mjs  generate-web-push-keys.mjs  install.sh  qualify-egress-runtime.mts  ui-fixture-server.mjs
tests/: agent-bridge.test.ts  architecture-boundaries.test.ts  clipboard-contract.test.ts  clipboard-status.test.ts  companion-activity.test.ts  control-auth-boundary.test.ts  controller-server.test.ts  egress-policy.test.ts  egress-proxy.test.ts  entra-authentication.test.ts  governance-contracts.test.ts  governance-store.test.ts  governed-operation-api.test.ts  governed-operation-service.test.ts  kasm-adapter.test.ts  litellm-adapter.test.ts  mcp-policy.test.ts  mcp-stdio-bridge.test.ts  microsoft365-connection-api.test.ts  microsoft365-connections.test.ts  openvtc-adapter.test.ts  openvtc-approval-store.test.ts  openvtc-companion-push.test.ts  openvtc-control.test.ts  policy-fixture.ts  policy-integrity.test.ts  real-model-route.test.ts  runtime-policy.test.ts  ui-refinement.test.ts  workspace-service.test.ts
(+331 files in other folders)
